kubectl_deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-scorecard-service
  labels:
    app: courts-local-scorecard-prod
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: courts-local-scorecard-prod
