kubectl_deploy/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: criminal-justice-delivery-prod-ingress
  namespace: courts-local-cjsData-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/set-identifier: criminal-justice-delivery-prod-ingress-courts-local-cjsData-prod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($host = 'courts-local-scorecard-prod.apps.live.cloud-platform.service.justice.gov.uk') {
        return 301 https://criminal-justice-delivery-data-dashboards.justice.gov.uk;
      }
      if ($host = 'criminal-justice-scorecard.justice.gov.uk') {
        return 301 https://criminal-justice-delivery-data-dashboards.justice.gov.uk;
      }
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
spec:
  tls:
  - hosts:
    - courts-local-cjsData-prod.apps.live.cloud-platform.service.justice.gov.uk
  - hosts:
    - criminal-justice-cjsData.justice.gov.uk
    secretName: courts-local-cjsData-cert-secret
  - hosts:
    - criminal-justice-delivery-data-dashboards.justice.gov.uk
    secretName: criminal-justice-delivery-cert-secret
  rules:
  - host: courts-local-cjsData-prod.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: local-cjsData-service
            port:
              number: 8080
  - host: criminal-justice-cjsData.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: local-cjsData-service
            port:
              number: 8080
  - host: criminal-justice-delivery-data-dashboards.justice.gov.uk
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: local-cjsData-service
              port:
                number: 8080
